--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+@import './variables.scss';
+
+* {
+	outline: none;
+	font-family: 'Open Sans', sans-serif;
+}
+
+body {
+	background-color: $light;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+	margin: 0;
+}
+
+a, button, input, textarea {
+	border: 3px;
+}
+
+.bg {
+	background-color: white;
+	box-shadow: 0 0 10px rgba(227, 231, 235, 0.788);
+	border-radius: 4px;
+}
+
+.shadow {
+	box-shadow: 0 0 10px rgba(227, 231, 235, 0.788);
+}
+
+.divider {
+	margin: 0;
+	padding: 0;
+	border-bottom: .1rem solid #e3e7eb;
+}
