--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 	<div class="side-bar" #sidebar>
 		<div class="close-container">
 			<div class="brand-container">
-				<a class="brand" routerLink="/home">EShopFree</a>
+				<a class="brand" routerLink="/home">EShopStyle</a>
 			</div>
 			<div>
 				<button class="toggler" (click)="close()">
@@ -42,7 +42,7 @@
 			</button>
 		</div> 
 		<div class="brand-container">
-			<a class="brand" routerLink="/home">EShopFree</a>
+			<a class="brand" routerLink="/home">EShopStyle</a>
 		</div>
 		<div class="options-container">
 			<img *ngIf="user" [src]="user.photoURL" alt="DP">
