--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -12,7 +12,7 @@
 	width: 100%;
 	height: 100%;
 	background-color: white;
-	transition: .3s all ease;
+	transition: .3s all ease-out;
 	transform: translateX(-100%);
 }
 
@@ -65,7 +65,6 @@ a {
 .brand {
 	font-size: 1.5rem;
 	font-family: 'Lobster';
-	font-weight: 500;
 }
 
 .options-container {
