--- a/src/app/components/save-product-form/save-product-form.component.scss
+++ b/src/app/components/save-product-form/save-product-form.component.scss
@@ -2,20 +2,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column; 
-  min-width: 80vw;
+  flex-direction: column;
   font-weight: 200;
-  height: 300px;
   border: 2px dashed #f16624;
   border-radius: 5px;
-  background: white;
-  margin: 10px 0;
+  margin: 10px auto;
 
   &.hovering {
       border: 2px solid #f16624;
       color: #dadada !important;
   }
-
   .file-label {
       font-size: 1.2em;
   }
