--- a/src/app/routes/admin/admin.component.html
+++ b/src/app/routes/admin/admin.component.html
@@ -1,4 +1,3 @@
 <section>
-	<h1>Admin file upload</h1>
-	<app-save-product-form></app-save-product-form>
+	<app-save-product></app-save-product>
 </section>
