--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -11,5 +11,6 @@
 				<app-product [product]="product"></app-product>
 			</div>
 		</div>
+		<button routerLink="/view/product/382b598d-1180-4270-8290-ec27a17c59cd">View product</button>
 	</div>
 </section>
