--- a/src/app/components/view-product/view-product.component.html
+++ b/src/app/components/view-product/view-product.component.html
@@ -1,1 +1,6 @@
-<p>view-product works!</p>
+<section>
+	<div *ngIf="product$ | async as product">
+		<h2>{{ product.name }}</h2>
+		<img [src]="product.pictureURL" alt="Product Picture" width="300">
+	</div>
+</section>
