--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -12,5 +12,6 @@
 			</div>
 		</div>
 		<button routerLink="/view/product/382b598d-1180-4270-8290-ec27a17c59cd">View product</button>
+		<button (click)="addProduct()">Add Product to cart</button>
 	</div>
 </section>
