--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,7 +1,7 @@
 <section>
-	<div class="hero mt-5 mb-2">
-		<h1 class="title">Welcome to <span class="brand">EShopStyle</span></h1>
-		<p class="disc">Shop anything you want with style.</p>
+	<div class="hero my-3">
+		<app-home-carousel></app-home-carousel>
+		<p class="disc center">Shop anything you want with style.</p>
 	</div>
 	<div class="divider"></div>
 	<div class="my-3">
