--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 @import '../../../variables.scss';
 
 .navbar {
-	background-color: white;
+	background-color: rgba(255, 255, 255, 0.808);
 }
 
 .side-bar {
@@ -52,7 +52,7 @@ a {
 	font-size: 1.5rem;
 	margin-left: 1rem;
 	margin-right: 1rem;
-	background-color: white;
+	background-color: transparent;
 }
 
 .brand-container {
