--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -38,7 +38,7 @@
 		</div>
 	</div>
 
-	<div class="top-bar shadow"> 
+	<div class="top-bar"> 
 		<div class="toggler-container">
 			<button class="toggler" (click)="open()">
 				<i class="fas fa-bars"></i>
