--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,34 @@ a:hover, button:hover {
 	cursor: pointer;
 }
 
+section {
+  animation: fadeInUp .5s ease;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0,40px,0)
+  }
+
+  to {
+    transform: translate3d(0,0,0);
+    opacity: 1
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0,40px,0)
+  }
+
+  to {
+    transform: translate3d(0,0,0);
+    opacity: 1
+  }
+}
+
 .bg {
 	background-color: white;
 	box-shadow: 0 0 10px rgba(227, 231, 235, 0.788);
