--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,12 +7,10 @@
 	text-decoration: none;
 }
 
-html, body {
-	height: 100%;
-}
-
 body {
 	background-image: linear-gradient(135deg, #99f, #f99);
+	background-size: cover;
+	background-repeat: no-repeat;
 	color: $light;
 }
 
