--- a/src/app/components/home-carousel/home-carousel.component.scss
+++ b/src/app/components/home-carousel/home-carousel.component.scss
@@ -50,7 +50,7 @@
   transform: translate(-50%, -50%);
   z-index: 2;
   background: rgba(255, 255, 255, 0.6);
-  box-shadow: 0 8px 32px 0 rgba(74, 74, 78, 0.37);
+	box-shadow: 0 0 10px rgba(131, 137, 145, 0.219);
   backdrop-filter: blur( 3px );
   -webkit-backdrop-filter: blur( 3px );
   border: 1px solid rgba( 255, 255, 255, 0.18 );
