--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,8 @@
 $light: #fbfcfd;
 $dark: #363b49;
-$text: #666f85;
+$text: #464d61;
 $error: #d61d20;
 $error-light: #ffdadb; 
 $green: #30B566;
+$pink: #f99;
+$violet: #99f;
