--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 @import '../../../variables.scss';
 
 .navbar {
-	background-color: rgba(255, 255, 255, 0.808);
+	background-color: rgb(255, 255, 255);
 }
 
 .side-bar {
