--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,5 +1,29 @@
 .product {
 	background-color: rgba(255, 255, 255, 0.6);
 	border-radius: 6px;
-	box-shadow: 0 0 10px rgba(131, 137, 145, 0.356);
+	box-shadow: 0 0 10px rgba(131, 137, 145, 0.219);
+}
+
+.name {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 1; /* number of lines to show */
+	-webkit-box-orient: vertical;
+}
+
+.img {
+	height: 275px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.img:hover {
+	cursor: pointer;
+}
+
+.add {
+	background-color: rgb(234, 239, 241);
+	color: rgb(104, 116, 128);
 }
