--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -11,19 +11,20 @@
 		<ng-template #loadingdiv>
 			<app-loading></app-loading>
 		</ng-template>
+		
 		<div class="divider"></div>
 	</div>
-	<div class="buttons mt-4">
-		<div>
+	<div class="buttons my-4">
+		<div class="mb-2 mb-sm-0">
 			<button routerLink="/view/collection/men clothing">View Men Clothing</button>
 		</div>
-		<div class="px-sm-2">
+		<div class="px-sm-2 mb-2 mb-sm-0">
 			<button routerLink="/view/collection/women clothing">View Women Clothing</button>
 		</div>
-		<div class="pr-sm-2">
+		<div class="pr-sm-2 mb-2 mb-sm-0">
 			<button routerLink="/view/collection/jewelery">View Jewelery</button>
 		</div>
-		<div>
+		<div class="mb-2 mb-sm-0">
 			<button routerLink="/view/collection/electronics">View Electronics</button>
 		</div>
 	</div>
