--- a/src/app/components/save-product/save-product.component.scss
+++ b/src/app/components/save-product/save-product.component.scss
@@ -6,7 +6,9 @@
   justify-content: center;
   flex-direction: column;
   border-radius: 5px;
-  height: 250px;
+  height: 100px;
+  width: 100%;
+  max-width: 400px;
   
   &.hovering {
     border: 2px solid $error;
@@ -27,4 +29,13 @@
 
 progress::-webkit-progress-value {
   transition: width 0.1s ease;
+}
+
+input, select {
+  width: 100%;
+  max-width: 400px;
+}
+
+input[type="file"]:hover {
+  cursor: pointer;
 }
