--- a/src/app/routes/login/login.component.html
+++ b/src/app/routes/login/login.component.html
@@ -1,29 +1,31 @@
 <section>
-	<div class="my-4">
-		<form class="login-form mx-auto">
-			<div>
-				<h1>Log into EShopStyle</h1>
-			</div>
-			<div *ngIf="auth.user$ | async as user">
-				<p>Logged in as {{ user.displayName }}</p>
-			</div>
-			<div *ngIf="error">
-				<p>{{ error }}</p>
-			</div>
-			<div class="input-box">
-				<label>Enter email: <br>
-					<input type="email" [(ngModel)]="email" name="email">
-				</label>
-			</div>
-			<div class="input-box">
-				<label>Enter password: <br>
-					<input type="password" [(ngModel)]="password" name="password">
-				</label>
-			</div>
-			<div class="input-box">
-				<button class="login-btn" (click)="login()">Login</button> <br>
-				<button (click)="googleLogin()">Login with Google</button>
-			</div>
-		</form>
-	</div>
+	<form (ngSubmit)="login()" ngNativeValidate>
+		<p class="heading">Login into EShopStyle</p>
+		<div *ngIf="auth.user$ | async as user">
+			<p class="info">Currently logged in as {{ user.displayName }}</p>
+		</div>
+		<div *ngIf="error">
+			<p class="error">{{ error }}</p>
+		</div>
+		<div>
+			<label>Enter email <span class="red">*</span></label> <br>
+			<input type="email" [(ngModel)]="email" name="email" placeholder="email" autocomplete="off">
+		</div>
+		<div>
+			<label>Enter password <span class="red">*</span></label> <br>
+			<input type="password" [(ngModel)]="password" name="password" placeholder="password">
+		</div>
+		<div>
+			<button type="submit" class="primary-btn">Login</button>
+		</div>
+		<div>
+			<p class="center"><a class="route-link" routerLink="/auth/sign-up">Sign up instead</a></p>
+		</div>
+		<div class="divider"></div>
+		<div>
+			<button type="button" class="google-btn" (click)="googleLogin()">
+				<img src="assets/img/google.svg">&nbsp;&nbsp;&nbsp;Continue with Google
+			</button>
+		</div>
+	</form>
 </section>
