--- a/src/app/routes/login/login.component.scss
+++ b/src/app/routes/login/login.component.scss
@@ -1,24 +1,33 @@
-.login-form {
-	background: rgba( 255, 255, 255, 0.25 );
-	box-shadow: 0 0 32px 0 rgba(74, 74, 78, 0.075);
-	backdrop-filter: blur( 4px );
-	-webkit-backdrop-filter: blur( 4px );
-	
-	border-radius: 6px;
-	max-width: 700px;
+form {
+	max-width: 400px;
+	width: 100%;
+	margin: 1rem auto;
 
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-}
+	div {
+		margin: .8rem auto;
+	}
 
-.input-box {
-	display: flex;
-	justify-content: center;
-}
+	input, button {
+		width: 100%;
+	}
 
-label {
-	text-align: left;
-	width: 80%;
-	max-width: 300px;
+	input {
+		margin-top: .5rem;
+	}
+
+	button {
+		margin-top: 1rem;
+		padding: .5rem .8rem;
+	}
+
+	.divider {
+		margin-top: 2rem;
+	}
+
+	.google-btn {
+		img {
+			vertical-align: middle;
+			width: 25px;
+		}
+	}
 }
