--- a/src/app/routes/profile/profile.component.html
+++ b/src/app/routes/profile/profile.component.html
@@ -1,1 +1,31 @@
-<p>profile works!</p>
+<section>
+	<div *ngIf="user$ | async as user" class="user-info mb-4">
+		<p class="heading my-3">Your Information</p>
+		<div class="img">
+			<img [src]="user.photoURL ? user.photoURL : 'assets/img/user.png'" alt="DP" height="100">
+		</div>
+		<div class="my-3">
+			<label>Address <br>
+				<input class="mt-1" type="text" name="address" [(ngModel)]="userInfo.address" placeholder="address">
+			</label>
+		</div>
+		<div class="my-3">
+			<label>Phone number <br>
+				<input class="mt-1" type="text" name="phone" [(ngModel)]="userInfo.phoneNumber" placeholder="phone number">
+			</label>
+		</div>
+		<div class="my-3">
+			<button class="update-btn px-4 py-1" (click)="updateProfile()">Update profile</button>
+		</div>
+	</div>
+	<div class="divider"></div>
+	<div *ngIf="orders$ | async as orders" class="orders mt-3">
+		<p class="heading mb-3">Your Orders</p>
+		<div *ngIf="orders.length === 0">
+			No orders
+		</div>
+		<div *ngFor="let order of orders">
+			<app-order [order]="order" (action)="ngOnInit()"></app-order>
+		</div>
+	</div>
+</section>
