--- a/src/app/routes/about/about.component.html
+++ b/src/app/routes/about/about.component.html
@@ -6,6 +6,6 @@
 		Placed orders are only simulation of how E-commerce application works and you will not receive any products available in this application. 
 	</div>
 	<div>
-		For ADMIN access and more info/inquiries, email me at <a class="route-link" href="mailto:panesar.pb08@gmail.com">panesar.pb08@gmail.com</a>
+		For more info/inquiries, email me at <a class="route-link" href="mailto:panesar.pb08@gmail.com">panesar.pb08@gmail.com</a>
 	</div>
 </section>
