--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,7 +1,7 @@
 <section>
 	<div class="hero my-3">
 		<app-home-carousel></app-home-carousel>
-		<p class="float-right disc"><a routerLink="/about">Disclaimer <i class="fas fa-exclamation-circle"></i></a></p>
+		<p class="float-right"><a class="disc" routerLink="/about">Disclaimer <i class="fas fa-exclamation-circle"></i></a></p>
 		<p class="disc center">Shop anything you want with style.</p>
 	</div>
 	<div class="divider"></div>
