--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,7 +62,21 @@ a:hover, button:hover {
 }
 
 section {
-  animation: fadeInUp .5s ease;
+  animation: zoomIn .5s ease;
+}
+
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+    transform: scale(1.25);
+  }
+  50% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 @keyframes fadeInUp {
